--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -389,7 +389,7 @@
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
   "staking.redeemItnRewards.step1.continueButton.label": "Continue",
-  "staking.redeemItnRewards.step1.description": "If you participated in the { itnLink } and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet. You will need the wallet recovery phrase for the Incentivized Testnet wallet used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
+  "staking.redeemItnRewards.step1.description": "If you participated in the { itnLink } and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet. You will need the <b>wallet recovery phrase for the Incentivized Testnet wallet</b> used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
   "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "Incentivized Testnet",
   "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/",
   "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
@@ -397,7 +397,7 @@
   "staking.redeemItnRewards.step1.learnMoreLink.url": "https://iohk.zendesk.com/hc/en-us/articles/900001656586",
   "staking.redeemItnRewards.step1.noResults": "No results",
   "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phrase",
-  "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase for your Incentivized Testnet Rewards wallet:",
+  "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase:",
   "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "Select Wallet",
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
