--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -389,7 +389,8 @@
   "staking.redeemItnRewards.step1.checkbox1Label": "インセンティブ付きテストネットで獲得した報酬の還元には、トランザクション手数料を支払う必要があることを理解しました。",
   "staking.redeemItnRewards.step1.checkbox2Label": "手数料は報酬の振込先ウォレットから支払われることを理解しました。",
   "staking.redeemItnRewards.step1.continueButton.label": "続ける",
-  "staking.redeemItnRewards.step1.description": "{ itnLink }に参加して、ステークプールの運営またはステークの委任により報酬を獲得した場合、この機能を使用してその報酬をCardanoメインネットでADAに還元することができます。報酬を還元するには、報酬の獲得に使用した<b>インセンティブ付きテストネット用ウォレットの復元</b>フレーズと、報酬の振込先となる既存のメインネット用Daedalusウォレットが必要です。このウォレットは、適用されるトランザクション手数料の支払いにも使用されます。",
+  "staking.redeemItnRewards.step1.description1": "{ itnLink }に参加して、ステークプールの運営またはステークの委任により報酬を獲得した場合、この機能を使用してその報酬をCardanoメインネットでADAに還元することができます。",
+  "staking.redeemItnRewards.step1.description2": "報酬を還元するには、報酬の獲得に使用した<b>インセンティブ付きテストネット用ウォレットの復元</b>フレーズと、報酬の振込先となる既存のメインネット用Daedalusウォレットが必要です。このウォレットは、適用されるトランザクション手数料の支払いにも使用されます。",
   "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "インセンティブ付きテストネット",
   "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/ja/",
   "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "無効な復元フレーズ",
