[DDW-283]: Add missing japanese translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -403,10 +403,10 @@
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
   "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
   "staking.stakePools.rankingDescription": "スライダーを使用して、委任する量を基にステークプールをランク付けします。",
-  "staking.stakePools.rankingExtraTooltip": "!!!Circulating supply",
+  "staking.stakePools.rankingExtraTooltip": "ADA流通量",
   "staking.stakePools.rankingLearnMoreUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.stakePools.rankingMaxTooltip": "!!!Saturation point",
-  "staking.stakePools.rankingMinTooltip": "!!!Minimum ADA required for staking",
+  "staking.stakePools.rankingMaxTooltip": "ステークプール飽和点",
+  "staking.stakePools.rankingMinTooltip": "委任に必要な最低ADA",
   "staking.stakePools.rankingOneWalletEnd": "ウォレットの量を基にランク付けされています。",
   "staking.stakePools.rankingOneWalletStart": "ステークプールは現在",
   "staking.stakePools.rankingSelectWallet": "ウォレットを選択する",
