[DDW-283]: Update english translations

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -403,10 +403,10 @@
   "staking.stakePools.rankingAllWalletsEnd": ".",
   "staking.stakePools.rankingAllWalletsStart": "Stake pools are currently ranked based on the combined amount in",
   "staking.stakePools.rankingDescription": "Use the slider to rank the stake pools based on the amount you intend to delegate.",
-  "staking.stakePools.rankingExtraTooltip": "Circulating supply",
+  "staking.stakePools.rankingExtraTooltip": "Circulating supply of ada",
   "staking.stakePools.rankingLearnMoreUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.stakePools.rankingMaxTooltip": "Saturation point",
-  "staking.stakePools.rankingMinTooltip": "Minimum ADA required for staking",
+  "staking.stakePools.rankingMaxTooltip": "Stake pool saturation point",
+  "staking.stakePools.rankingMinTooltip": "Minimum ada required to delegate",
   "staking.stakePools.rankingOneWalletEnd": "wallet.",
   "staking.stakePools.rankingOneWalletStart": "Stake pools are currently ranked based on the amount in",
   "staking.stakePools.rankingSelectWallet": "select a wallet",
