--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -384,6 +384,44 @@
   "staking.navigation.info": "情報",
   "staking.navigation.rewards": "報酬",
   "staking.navigation.stake_pools": "ステークプール",
+  "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "ウォレット追加",
+  "staking.redeemItnRewards.noWallets.description": "インセンティブ付きテストネットの還元機能はShelley対応のウォレットがないため利用できません。",
+  "staking.redeemItnRewards.step1.checkbox1Label": "インセンティブ付きテストネットで獲得した報酬の還元には、トランザクション手数料を支払う必要があることを理解しました。",
+  "staking.redeemItnRewards.step1.checkbox2Label": "手数料は報酬の振込先ウォレットから支払われることを理解しました。",
+  "staking.redeemItnRewards.step1.continueButton.label": "続ける",
+  "staking.redeemItnRewards.step1.description1": "{ itnLink }に参加して、ステークプールの運営またはステークの委任により報酬を獲得した場合、この機能を使用してその報酬をCardanoメインネットでADAに還元することができます。",
+  "staking.redeemItnRewards.step1.description2": "報酬を還元するには、報酬の獲得に使用した<b>インセンティブ付きテストネット用ウォレットの復元</b>フレーズと、報酬の振込先となる既存のメインネット用Daedalusウォレットが必要です。このウォレットは、適用されるトランザクション手数料の支払いにも使用されます。",
+  "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "インセンティブ付きテストネット",
+  "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/ja/",
+  "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "無効な復元フレーズ",
+  "staking.redeemItnRewards.step1.learnMoreLink.label": "もっと知る",
+  "staking.redeemItnRewards.step1.learnMoreLink.url": "https://iohk.zendesk.com/hc/ja/articles/900001656586",
+  "staking.redeemItnRewards.step1.noResults": "検索結果はありません",
+  "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "復元フレーズを入力してください",
+  "staking.redeemItnRewards.step1.recoveryPhraseLabel": "ウォレット復元フレーズ：",
+  "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "ウォレットを選択してください",
+  "staking.redeemItnRewards.step1.title": "インセンティブ付きテストネットの報酬を還元する",
+  "staking.redeemItnRewards.step1.walletsDropdownError": "選択されたウォレットには、トランザクション手数料分のADAが不足しています。別のウォレットを選択するか、このウォレットに資金を追加してください。",
+  "staking.redeemItnRewards.step1.walletsDropdownLabel": "報酬の振込先：",
+  "staking.redeemItnRewards.step2.backButtonLabel": "戻る",
+  "staking.redeemItnRewards.step2.continueButtonLabel": "報酬の還元を確認する",
+  "staking.redeemItnRewards.step2.finalTotal": "振込総額",
+  "staking.redeemItnRewards.step2.rewardsTotal": "報酬総額",
+  "staking.redeemItnRewards.step2.spendingPasswordLabel": "ウォレット送信時パスワード<em>（<b>{walletName}</b>ウォレット）</em>",
+  "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "パスワード",
+  "staking.redeemItnRewards.step2.title": "報酬の還元を確認する",
+  "staking.redeemItnRewards.step2.transactionFees": "トランザクション手数料",
+  "staking.redeemItnRewards.step2.walletToLabel": "振込先",
+  "staking.redeemItnRewards.step2.walletToName": "{walletName} <span>ウォレット</span>",
+  "staking.redeemItnRewards.step3.failure.backButtonLabel": "戻る",
+  "staking.redeemItnRewards.step3.failure.closeWindowLinkLabel": "ウィンドウを閉じる",
+  "staking.redeemItnRewards.step3.failure.description1NoRewards": "このインセンティブ付きテストネット用ウォレットには報酬がありません。正しいウォレット復元フレーズを入力したか確認してください。",
+  "staking.redeemItnRewards.step3.failure.description2InvalidWallet": "入力された復元フレーズに対応するウォレットの報酬は既に還元されています。",
+  "staking.redeemItnRewards.step3.failure.description3Generic": "このインセンティブ付きテストネット用ウォレットには報酬がありません。正しいウォレット復元フレーズを入力したか、また、すでに報酬が還元されていないか確認してください。",
+  "staking.redeemItnRewards.step3.success.description": "<b>{walletName}</b>ウォレットに<b>{finalTotal}</b>が振り込まれました。このトランザクションで、<b>{transactionFees}</b>のトランザクション手数料が発生しました。",
+  "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "PDF証明書をダウンロードする",
+  "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "ウォレットを開く",
+  "staking.redeemItnRewards.step3.success.title": "インセンティブ付きテストネットの報酬は還元されました",
   "staking.rewards.exportButtonLabel": "CSV形式でエキスポートする",
   "staking.rewards.learnMore.ButtonLabel": "もっと知る",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000026583",
